--- a/ist-107-r/index.html
+++ b/ist-107-r/index.html
@@ -89,7 +89,7 @@ IST107
             visibility:hidden;" alt="Flying bee" height="179" width="144" />
 
    <h1> Kelowna Wine Trails and Tours</h1>
-   <h3> Student name / email </h3>
+   <h3> Abdallah Jamshaid Syed / abdallahjamshaid@yahoo.com </h3>
    <p id="gfg"></p>
    <hr size="1" color="#b6bcbb"> <br />
 
